--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-loader": "^0.9.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
+    "style-loader": "^0.18.2",
     "vue-loader": "^12.1.0",
     "vue-router": "^2.5.3",
     "vue-template-compiler": "^2.3.3",
